--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -3,7 +3,6 @@
 }
 body{
     background-color: #F9F9F9;
-        margin: 0 56px;
     
 
 }
@@ -70,6 +69,7 @@ header{
 
 .first-part{
     margin-right: 12px;
+    margin-left: 56px;
 }
 .first-part h2{
     font-size: 70px;
@@ -85,7 +85,7 @@ header{
     line-height: 32px;
     color: #66645E;
     margin-bottom: 49px;
-
+    
 }
 
 .first-part button{
@@ -113,64 +113,225 @@ header{
 .second{
     display: flex;
     flex-direction: column;
-    border: 1px solid red;
     margin-top: 187.35px;
 
 
  
 }
+.second-part {
+    text-align: center;
 
+   
+}
 .second-part h2{
     font-family: var(--RobotoFont);
     font-weight: 800;
     font-size: 48px;
     line-height: 64px;
-    text-align: center;
     margin-bottom: 24px;
-border: 1px solid green;
+    height: 64px;
 }
 
 .second-part p {
- font-family: var(--MontSerat);
  font-weight: 400;
  font-size: 18px;
  line-height: 26px;
- border: 1px solid blue;
- text-align: center;
  margin-bottom: 48px;
- padding: 0 260px;
+ height: 52px;
+ color: var(--BlackColor);
 }
  
 .second-part-imgs{
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-}
-.image-1{
-    width: 427px;
-    height: 340px;
-    background-color: greenyellow;
+    margin: 0 56px;
 
-   flex-basis: calc(100% - 100% * 2/3 - 23px);
-  
+}
+
+
+
+.image {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    background-color: var(--WhiteColor);
+    box-shadow: 0px 2px 8px rgba(0, 0, 0, 0.1);
+    border-radius: 8px;
+    flex-basis:33.333%;
+
+
+    
 }
 
 .image-2{
-    width: 427px;
-    height: 340px;
-    background-color:greenyellow;
- 
-    flex-basis: calc(100% - 100% * 2/3 - 23px);
+    margin: 0 23px;
+}
 
+.image img{
+    margin: 64px 170px 0 170px;
+   
+}
+
+
+
+.image h2 {
+    margin: 24px 113px 0 113px;
+    font: var(--MontSerat);
+    font-size: 24px;
+    line-height: 32px;
+    font-weight: 700;
+
+}
+.image p{
+    margin: 16px 24px 64px 24px;
+    font-size: 18px;
+    font-weight: 400;
+    line-height: 26px;
+    color: var(--BlackColor);
+    font-family: var(--MontSerat);
+}
+
+/* Part 3 under section 2 */
+
+.part-3{
+    display: flex;
+    align-items: center;
+    margin: 0  118px 0  56px;
+}
+
+.futureInfo{
+    margin-top: 193px;
+    margin-right: 138px;
+    flex-basis: 70%;
+}
+.futureInfo h2 {
+    font-size: 48px;
+    line-height: 64px;
+    font-family: var(--RobotoFont);
+    font-weight: 800;
+    margin-top: 24px;
+    margin-bottom: 24px;
+}
+.futureInfo p {
+    font-size: 18px;
+    line-height: 26px;
+    font-family: var(--MontSerat);
+    font-weight: 400;
+    color: var(--BlackColor);
  
+   
+}
+
+
+.membersWidget{
+    border: 1px solid blue;
+    margin-top: 189px;
+    padding-left: 40px;
+    border: 4px solid #303031;
+    border-radius: 16px;
+    padding-top: 32px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+   flex-basis: 30%;
+
+    
+}
+
+.membersWidget span{
+    font-family: var(--NotoSans);
+    font-size: 32px;
+    line-height: 40px;
+    font-weight: 700;    
 
 }
 
-.image-3{
-    width: 427px;
-    height: 340px;
-    background-color: greenyellow;
+.membersWidget img{
+    width: 64px;
+    height: 64px;
+    object-fit: cover;
+    border-radius: 50%;
+    margin-right: 12px;
+
+}
+
+
+.dillon , .anna , .kas {
+    display: flex;
+    flex-direction: row;
+   align-items: center;
+    
+
+}
+.dillon{
+    margin-top: 28px
+}
+.dillon,.anna,.kas{
+    margin-bottom: 28px;
+}
+
+.values h2{
+    font-size: 24px;
+    line-height: 26px;
+    font-family: var(--NotoSans);
+    font-weight: 600;
+    margin-bottom: 4px;
+    color: var(--BlackColor);
+}
+.values p{
+    font-size: 16px;
+    line-height: 26px;
+    font-family: var(--NotoSans);
+    font-weight: 500;
+    color: var(--GrayColor);
+    text-transform: uppercase;
+
+}
+
+/* Part 4 under section 2 */
+
+.part-4{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+}
+
+.jassir{
   
-   flex-basis: calc(100% - 100% * 2/3 - 23px);
-
+    margin-top: 193px;
+    margin-left: 80px;
 }
+
+
+
+.something{
+    display: flex;
+}
+
+.LikefutureInfo{
+    flex-basis:50% ;
+    margin-top: 170px;
+    margin-right: 54px;
+}
+.LikefutureInfo h2 {
+    font-size: 48px;
+    line-height: 64px;
+    font-family: var(--RobotoFont);
+    font-weight: 800;
+    margin-top: 24px;
+    margin-bottom: 24px;
+}
+.LikefutureInfo p {
+    font-size: 18px;
+    line-height: 26px;
+    font-family: var(--MontSerat);
+    font-weight: 400;
+    color: var(--BlackColor);
+ 
+   
+}
+
+
